[package]
name = "pinnable"
version = "0.1.1"
authors = ["Frank Steffahn <fdsteffahn@gmail.com>"]
license = "MIT OR Apache-2.0"
description = """
A Mutex that can be pinned
"""
repository = "https://github.com/steffahn/pinnable"
homepage = "https://github.com/steffahn/pinnable"
documentation = "https://docs.rs/pinnable"
keywords = ["mutex", "lock"]
categories = ["concurrency"]
readme = "README.md"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
